--- a/0001-两数之和/思路二.md
+++ b/0001-两数之和/思路二.md
@@ -1,1 +1,39 @@
+### 思路
+  双指针，时间复杂度为N
+  1.先排序，但是注意，**排序会打乱索引顺序**
+  2.首尾指针相向移动，会得到结果
+  3.将得到的结果，去和原始数组做对比，找到其索引
+### 代码
+```java
+  class Solution {
+    public int[] twoSum(int[] nums, int target) {
+        int[] res = new int[2];
+        int index=0;
+        int[] numsSort = Arrays.copyOf(nums,nums.length);
+        Arrays.sort(numsSort);
 
+        int start=0,end=numsSort.length-1;//头指针和尾指针
+
+        while (start<end){
+            if ((numsSort[start] + numsSort[end]) > target) {
+                end--;
+                continue;
+            }else if ((numsSort[start] + numsSort[end]) < target) {
+                start++;
+                continue;
+            }
+            for (int i=0;i<nums.length;i++){
+                if (nums[i]==numsSort[start] || nums[i]==numsSort[end]){
+                    res[index++]=i;
+                    if (index==2) return res;
+                }
+            }
+        }
+        return res;
+    }
+  }
+```
+### 
+执行用时：5 ms
+内存消耗：37.5 MB
+战胜人数：96.84%
