--- a/0001-两数之和/思路二.md
+++ b/0001-两数之和/思路二.md
@@ -1,8 +1,8 @@
 ### 思路
-  双指针，时间复杂度为N
-  1.先排序，但是注意，**排序会打乱索引顺序**
-  2.首尾指针相向移动，会得到结果
-  3.将得到的结果，去和原始数组做对比，找到其索引
+  - 双指针，时间复杂度为N
+  - 1.先排序，但是注意，**排序会打乱索引顺序**
+  - 2.首尾指针相向移动，会得到结果
+  - 3.将得到的结果，去和原始数组做对比，找到其索引
 ### 代码
 ```java
   class Solution {
