--- a/0001-两数之和/思路一.md
+++ b/0001-两数之和/思路一.md
@@ -1,6 +1,6 @@
 ### 思路
-  利用HashMap，key存数值，value存索引，
-  如果map中存在otherkey = target-key，则得到结果
+  - 利用HashMap，key存数值，value存索引，
+  - 如果map中存在otherkey = target-key，则得到结果
 ### 代码
 ```java
   class Solution {
@@ -9,8 +9,8 @@
         for (int i = 0; i < nums.length; i++) { 
             map.put(nums[i], i); 
         } 
-        for (int i = 0; i < nums.length; i++) { //不能和自身相加 
-            if (map.containsKey(target-nums[i])){ 
+        for (int i = 0; i < nums.length; i++) { 
+            if (map.containsKey(target-nums[i])){ //不能和自身相加
                 if (i == (int)map.get(target-nums[i])){ 
                     continue; 
                 } 
@@ -23,3 +23,8 @@
     }
   }
 ```
+### 结果
+- 执行用时：11 ms
+- 内存消耗：30.7 MB
+- 战胜人数：66.85%
+
